# NestJSAPI

./: .eslintrc.json  Cargo.toml  README.md  docker-compose.yml  gridsome.config.js  package.json
db/: docker-compose.yml
migrations/: 20250721091505_create_tables.sql
src/: app.module.ts  main.js  main.rs  main.ts
src/components/: LayoutHeader.vue
src/handlers/: auth_handler.rs
src/layouts/: Default.vue
src/models/: user.rs
src/pages/: About.vue  Index.vue
src/tasks/: task.entity.ts  task.service.ts  tasks.controller.ts  tasks.module.ts
src/tasks/dto/: create-task-dto.ts  update-task-dto.ts
